// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`UserControl matches the snapshot when profileImage is empty 1`] = `
<UserAvatarMe
  attention={false}
  className=""
  profileImage=""
  status="available"
  style={Object {}}
>
  <div
    className="useravatarme"
    style={Object {}}
  >
    <Avatar
      className="useravatarme--shadowed"
      dimmed={false}
      displayName={null}
      imgUrl=""
      loading={false}
      size="medium"
      style={Object {}}
    >
      <div
        className="avatar  useravatarme--shadowed"
        style={
          Object {
            "height": "32px",
            "lineHeight": "32px",
            "width": "32px",
          }
        }
      >
        <img
          alt="user avatar"
          src="user-placeholder.png"
          style={
            Object {
              "height": "32px",
              "lineHeight": "32px",
              "width": "32px",
            }
          }
        />
      </div>
    </Avatar>
    <div
      className="useravatarme-status"
    >
      <StatusBubbleSettings
        className=""
        status="available"
        style={Object {}}
      >
        <div
          className="statusbubblesettings statusbubble--available"
          style={Object {}}
        >
          <IconHamburger
            className=""
            color="var(--white)"
            size={9}
            style={Object {}}
          >
            <svg
              className=""
              height={9}
              style={Object {}}
              viewBox="0 0 27 23"
              width={9}
              xmlns="http://www.w3.org/2000/svg"
            >
              <g
                fill="var(--white)"
              >
                <path
                  d="M1.46,3.7H26.54c.53,0,1-.29,1-.66V1.37c0-.37-.43-.67-1-.67H1.46C.93.7.5,1,.5,1.37V3C.5,3.41.93,3.7,1.46,3.7Zm0,9.8H26.54c.53,0,1-.3,1-.67V11.17c0-.37-.43-.67-1-.67H1.46c-.53,0-1,.3-1,.67v1.66C.5,13.2.93,13.5,1.46,13.5Zm0,10H26.54c.53,0,1-.3,1-.67V21.17c0-.37-.43-.67-1-.67H1.46c-.53,0-1,.3-1,.67v1.66C.5,23.2.93,23.5,1.46,23.5Z"
                  transform="translate(-0.5 -0.7)"
                />
              </g>
            </svg>
          </IconHamburger>
        </div>
      </StatusBubbleSettings>
    </div>
  </div>
</UserAvatarMe>
`;

exports[`UserControl matches the snapshot when profileImage is null 1`] = `
<UserAvatarMe
  attention={false}
  className=""
  profileImage=""
  status="available"
  style={Object {}}
>
  <div
    className="useravatarme"
    style={Object {}}
  >
    <Avatar
      className="useravatarme--shadowed"
      dimmed={false}
      displayName={null}
      imgUrl=""
      loading={false}
      size="medium"
      style={Object {}}
    >
      <div
        className="avatar  useravatarme--shadowed"
        style={
          Object {
            "height": "32px",
            "lineHeight": "32px",
            "width": "32px",
          }
        }
      >
        <img
          alt="user avatar"
          src="user-placeholder.png"
          style={
            Object {
              "height": "32px",
              "lineHeight": "32px",
              "width": "32px",
            }
          }
        />
      </div>
    </Avatar>
    <div
      className="useravatarme-status"
    >
      <StatusBubbleSettings
        className=""
        status="available"
        style={Object {}}
      >
        <div
          className="statusbubblesettings statusbubble--available"
          style={Object {}}
        >
          <IconHamburger
            className=""
            color="var(--white)"
            size={9}
            style={Object {}}
          >
            <svg
              className=""
              height={9}
              style={Object {}}
              viewBox="0 0 27 23"
              width={9}
              xmlns="http://www.w3.org/2000/svg"
            >
              <g
                fill="var(--white)"
              >
                <path
                  d="M1.46,3.7H26.54c.53,0,1-.29,1-.66V1.37c0-.37-.43-.67-1-.67H1.46C.93.7.5,1,.5,1.37V3C.5,3.41.93,3.7,1.46,3.7Zm0,9.8H26.54c.53,0,1-.3,1-.67V11.17c0-.37-.43-.67-1-.67H1.46c-.53,0-1,.3-1,.67v1.66C.5,13.2.93,13.5,1.46,13.5Zm0,10H26.54c.53,0,1-.3,1-.67V21.17c0-.37-.43-.67-1-.67H1.46c-.53,0-1,.3-1,.67v1.66C.5,23.2.93,23.5,1.46,23.5Z"
                  transform="translate(-0.5 -0.7)"
                />
              </g>
            </svg>
          </IconHamburger>
        </div>
      </StatusBubbleSettings>
    </div>
  </div>
</UserAvatarMe>
`;

exports[`UserControl matches the snapshot when showing a placeholder 1`] = `
<UserAvatarMe
  attention={false}
  className=""
  profileImage="http://some.url.com/picture"
  status="available"
  style={Object {}}
>
  <div
    className="useravatarme"
    style={Object {}}
  >
    <Avatar
      className="useravatarme--shadowed"
      dimmed={false}
      displayName={null}
      imgUrl="http://some.url.com/picture"
      loading={false}
      size="medium"
      style={Object {}}
    >
      <div
        className="avatar  useravatarme--shadowed"
        style={
          Object {
            "height": "32px",
            "lineHeight": "32px",
            "width": "32px",
          }
        }
      >
        <img
          alt="user avatar"
          src="http://some.url.com/picture"
          style={
            Object {
              "height": "32px",
              "lineHeight": "32px",
              "width": "32px",
            }
          }
        />
      </div>
    </Avatar>
    <div
      className="useravatarme-status"
    >
      <StatusBubbleSettings
        className=""
        status="available"
        style={Object {}}
      >
        <div
          className="statusbubblesettings statusbubble--available"
          style={Object {}}
        >
          <IconHamburger
            className=""
            color="var(--white)"
            size={9}
            style={Object {}}
          >
            <svg
              className=""
              height={9}
              style={Object {}}
              viewBox="0 0 27 23"
              width={9}
              xmlns="http://www.w3.org/2000/svg"
            >
              <g
                fill="var(--white)"
              >
                <path
                  d="M1.46,3.7H26.54c.53,0,1-.29,1-.66V1.37c0-.37-.43-.67-1-.67H1.46C.93.7.5,1,.5,1.37V3C.5,3.41.93,3.7,1.46,3.7Zm0,9.8H26.54c.53,0,1-.3,1-.67V11.17c0-.37-.43-.67-1-.67H1.46c-.53,0-1,.3-1,.67v1.66C.5,13.2.93,13.5,1.46,13.5Zm0,10H26.54c.53,0,1-.3,1-.67V21.17c0-.37-.43-.67-1-.67H1.46c-.53,0-1,.3-1,.67v1.66C.5,23.2.93,23.5,1.46,23.5Z"
                  transform="translate(-0.5 -0.7)"
                />
              </g>
            </svg>
          </IconHamburger>
        </div>
      </StatusBubbleSettings>
    </div>
  </div>
</UserAvatarMe>
`;

exports[`UserControl matches the snapshot when showing an image 1`] = `
<UserAvatarMe
  attention={false}
  className=""
  profileImage="http://some.url.com/picture"
  status="available"
  style={Object {}}
>
  <div
    className="useravatarme"
    style={Object {}}
  >
    <Avatar
      className="useravatarme--shadowed"
      dimmed={false}
      displayName={null}
      imgUrl="http://some.url.com/picture"
      loading={false}
      size="medium"
      style={Object {}}
    >
      <div
        className="avatar  useravatarme--shadowed"
        style={
          Object {
            "height": "32px",
            "lineHeight": "32px",
            "width": "32px",
          }
        }
      >
        <img
          alt="user avatar"
          src="http://some.url.com/picture"
          style={
            Object {
              "height": "32px",
              "lineHeight": "32px",
              "width": "32px",
            }
          }
        />
      </div>
    </Avatar>
    <div
      className="useravatarme-status"
    >
      <StatusBubbleSettings
        className=""
        status="available"
        style={Object {}}
      >
        <div
          className="statusbubblesettings statusbubble--available"
          style={Object {}}
        >
          <IconHamburger
            className=""
            color="var(--white)"
            size={9}
            style={Object {}}
          >
            <svg
              className=""
              height={9}
              style={Object {}}
              viewBox="0 0 27 23"
              width={9}
              xmlns="http://www.w3.org/2000/svg"
            >
              <g
                fill="var(--white)"
              >
                <path
                  d="M1.46,3.7H26.54c.53,0,1-.29,1-.66V1.37c0-.37-.43-.67-1-.67H1.46C.93.7.5,1,.5,1.37V3C.5,3.41.93,3.7,1.46,3.7Zm0,9.8H26.54c.53,0,1-.3,1-.67V11.17c0-.37-.43-.67-1-.67H1.46c-.53,0-1,.3-1,.67v1.66C.5,13.2.93,13.5,1.46,13.5Zm0,10H26.54c.53,0,1-.3,1-.67V21.17c0-.37-.43-.67-1-.67H1.46c-.53,0-1,.3-1,.67v1.66C.5,23.2.93,23.5,1.46,23.5Z"
                  transform="translate(-0.5 -0.7)"
                />
              </g>
            </svg>
          </IconHamburger>
        </div>
      </StatusBubbleSettings>
    </div>
  </div>
</UserAvatarMe>
`;
